# panel-chat-examples

./: .gitignore  .pre-commit-config.yaml  DEVELOPER_GUIDE.md  LICENSE.md  README.md  mkdocs.yml  pixi.toml  pyproject.toml  requirements.txt  requirements_dev.txt
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  documentation.yml
basics/: echo.py  echo_stream.py
docs/: applicable_recipes.md  autogen.md  awesome_list.md  basics.md  chat_features.md  components.md  core.md  external_resources.md  feature.md  features.md  index.md  kickstart_snippets.md  langchain.md  linked_resources.md  links.md  llama_index.md  mistral.md  openai.md  ploomber_resources.md  recipes.md
docs/assets/videos/: basic_chat.webm  basic_echo_stream_async.webm  basic_streaming_chat.webm  component_environment_widget.webm  feature_chained_response.webm  feature_delayed_placeholder.webm  feature_replace_response.webm  feature_slim_interface.webm  langchain_llama_and_mistral.webm  langchain_math_assistant.webm  langchain_pdf_assistant.webm  langchain_with_memory.webm  mistral_chat.webm  mistral_with_memory.webm  openai_async_chat.webm  openai_authentication.webm  openai_chat.webm  openai_hvplot.webm  openai_image_generation.webm  openai_two_bots.webm
docs/examples/applicable_recipes/: langchain_chat_with_pandas.py  langchain_chat_with_pdf.py  openai_chat_with_hvplot.py  openai_images_dall_e.py  openai_two_bots.py  pydanticai_find_city_agent.py  tool_hvplot.json  tool_renderer.json
docs/examples/assistants/: assistant_streamlit_converter.py
docs/examples/basics/: basic_chat.py  basic_custom_widgets.py  basic_echo_stream_async.py  basic_streaming_chat.py  basic_streaming_chat_async.py  echo_stream.py  echo_stream_async.py
docs/examples/chat_features/: chained_response.py  control_callback_response.py  custom_input_widgets.py  delayed_placeholder.py  echo_chat.py  stream_echo_chat.py  styled_slim_interface.py
docs/examples/components/: component_chat_input.py  component_environment_widget.py  component_status.py  environment_widget.py
docs/examples/core/: chained_response.py
docs/examples/feature/: feature_slim_interface.py
docs/examples/features/: chained_response.py  delayed_placeholder.py  feature_chained_response.py  feature_delayed_placeholder.py  feature_replace_response.py  feature_slim_interface.py  replace_response.py
docs/examples/kickstart_snippets/: langchain_.py  llama_cpp_python_.py  llama_index_.py  mistralai_.py  openai_.py
docs/examples/langchain/: chat_memory.py  chat_with_memory.py  chat_with_pdf.py  chroma_pdf_qa.py  langchain_chat_pandas_df.py  langchain_document_viewer.py  langchain_lcel.py  langchain_llama_and_mistral.py  langchain_math_assistant.py  langchain_pdf_assistant.py  langchain_rag_viewer.py  langchain_streaming_lcel_with_memory.py  langchain_with_memory.py  llama_and_mistral.py
docs/examples/llamaindex/: llamaindex_agents.py
docs/examples/llamaindex/example_data/: private_key.txt  public_key.txt
docs/examples/llamaindex/example_docs/: history.txt  what_is_agent.txt
docs/examples/mistral/: chat.py  chat_memory.py  iris.yaml  mistral_and_llama.py  mistral_api_chat.py  mistral_chat.py  mistral_with_memory.py  test.ipynb
docs/examples/openai/: authentication.py  image.py  openai_async_chat.py  openai_authentication.py  openai_chat.py  openai_chat_with_hvplot.py  openai_function_calling.py  openai_hvplot.py  openai_image_generation.py  openai_playground.py  openai_two_bots.py  openai_with_memory.py  tool_hvplot.json  tool_renderer.json  two_bots.py  upload.py
docs/examples/recipes/: openai_core.py
docs/pyodide/: chained_response.html  chained_response.js  control_callback_response.html  control_callback_response.js  custom_input_widgets.html  custom_input_widgets.js  delayed_placeholder.html  delayed_placeholder.js  echo_chat.html  echo_chat.js  stream_echo_chat.html  stream_echo_chat.js  styled_slim_interface.html  styled_slim_interface.js
docs/reference/: panel_chat_examples.md
examples/: index.md
examples/basics/: echo.py  echo_stream.py
examples/features/: chained_response.py  delayed_placeholder.py  slim_interface.py
examples/langchain/: chroma_pdf_qa.py  llama_and_mistral.py  math_chain.py
examples/llama/: chat.py
examples/ui_components/: environment_widget.py  key_manager.py
features/: chained_response.py  replace_response.py  slim_interface.py
langchain/: chat_memory.py  chroma_pdf_qa.py  math_chain.py
openai/: authentication.py  chat.py  chat_async.py  two_bots.py  upload.py
overrides/: main.html
panel_chat_examples/: __init__.py  _environment_widget.py
panel_chat_examples/components/: __init__.py  chat_input.py  status.py
panel_chat_examples/langchain/: __init__.py  _document.py  _rag.py
panel_chat_examples/langchain/sample_data/: __init__.py
scripts/: convert_apps.py  generate_gallery.py  generate_pyodide_apps.py  postprocess_videos.py  social_card_app.py
tests/: conftest.py  locustfile.py  test_all.py
tests/examples/: test_environment_widget.py
tests/ui/: example.csv  inputs.py  test_all.py  user.py
