[tool.ruff]
target-version = "py39"
extend-select = ["I", "TRY"]

[tool.pytest.ini_options]
addopts = "--cov=panel_chat_examples/ --cov-report=term-missing"
asyncio_mode = "strict"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "ui: marks tests as ui tests (deselect with '-m \"not ui\"')",
]

[tool.isort]
profile = "black"

[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "panel_chat_examples/__init__.py"

[tool.hatch.envs.default]
dependencies = [
    "black",
    "isort",
    "locust",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mypy",
    "pre-commit",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-playwright",
    "pytest",
    "ruff",
    "panel-chat-examples[all]",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-ui = "pytest -m ui"
test-cov-xml = "pytest --cov-report=xml"
lint = [
  "isort .",
  "black .",
  "ruff --fix .",
]
lint-check = [
  "isort . --check-only",
  "black --check .",
  "ruff .",
]
docs-serve = "python scripts/generate_gallery.py;mkdocs serve"
docs-build = "python scripts/postprocess_videos.py;python scripts/generate_gallery.py;mkdocs build;mkdocs serve"
panel-serve = "panel serve docs/examples/**/*.py --static-dirs thumbnails=docs/assets/thumbnails --autoreload"
panel-convert = "python scripts/convert_apps.py"
docs-record = "pytest -s -m ui --screenshot on --video on --headed && python scripts/postprocess_videos.py"
loadtest = "locust -f tests/locustfile.py -H http://localhost:5006 --users 1 --spawn-rate 1"

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[[tool.mypy.overrides]]
module = [
    "param.*",
]
ignore_missing_imports = true

[project]
name = "panel-chat-examples"
authors = [
  { name = "panel-chat-examples", email = "developers@holoviz.org" }
]
description = "Example recipes for Panel ChatInterface."
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.9"
dependencies = [
    "panel>=1.4.0rc"
]

[project.optional-dependencies]
openai = [
    "openai",
]
mistralai = [
    "mistralai",
]
langchain = [
    "langchain>=0.0.350",
]
llama_index = [
    "llama_index>=0.10.40",
]
llama_cpp = [
    "llama_cpp_python",
]
all = [
    "panel-chat-examples[openai,mistralai,langchain,llama_index,llama_cpp]",
]

[project.urls]
Documentation = "https://holoviz-topics.github.io/panel-chat-examples/"
Source = "https://github.com/holoviz-topics/panel-chat-examples"
